; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/arm_atsam/usb/extr_usb.c_usb_device_endpoint_get_config_defaults.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/arm_atsam/usb/extr_usb.c_usb_device_endpoint_get_config_defaults.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_device_endpoint_config = type { i32, i32, i32, i64 }

@USB_ENDPOINT_8_BYTE = common dso_local global i32 0, align 4
@USB_DEVICE_ENDPOINT_TYPE_CONTROL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usb_device_endpoint_get_config_defaults(%struct.usb_device_endpoint_config* %0) #0 {
  %2 = alloca %struct.usb_device_endpoint_config*, align 8
  store %struct.usb_device_endpoint_config* %0, %struct.usb_device_endpoint_config** %2, align 8
  %3 = load %struct.usb_device_endpoint_config*, %struct.usb_device_endpoint_config** %2, align 8
  %4 = call i32 @Assert(%struct.usb_device_endpoint_config* %3)
  %5 = load %struct.usb_device_endpoint_config*, %struct.usb_device_endpoint_config** %2, align 8
  %6 = getelementptr inbounds %struct.usb_device_endpoint_config, %struct.usb_device_endpoint_config* %5, i32 0, i32 3
  store i64 0, i64* %6, align 8
  %7 = load i32, i32* @USB_ENDPOINT_8_BYTE, align 4
  %8 = load %struct.usb_device_endpoint_config*, %struct.usb_device_endpoint_config** %2, align 8
  %9 = getelementptr inbounds %struct.usb_device_endpoint_config, %struct.usb_device_endpoint_config* %8, i32 0, i32 2
  store i32 %7, i32* %9, align 8
  %10 = load %struct.usb_device_endpoint_config*, %struct.usb_device_endpoint_config** %2, align 8
  %11 = getelementptr inbounds %struct.usb_device_endpoint_config, %struct.usb_device_endpoint_config* %10, i32 0, i32 0
  store i32 0, i32* %11, align 8
  %12 = load i32, i32* @USB_DEVICE_ENDPOINT_TYPE_CONTROL, align 4
  %13 = load %struct.usb_device_endpoint_config*, %struct.usb_device_endpoint_config** %2, align 8
  %14 = getelementptr inbounds %struct.usb_device_endpoint_config, %struct.usb_device_endpoint_config* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  ret void
}

declare dso_local i32 @Assert(%struct.usb_device_endpoint_config*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
